# hatch-build-time-vendoring

./: .actrc  .pre-commit-config.yaml  README.md  pyproject.toml  zizmor.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
src/hatch_build_time_vendoring/: git.py  hooks.py  plugin.py
tests/: conftest.py  test_git.py  test_integration.py  test_vendoring_plugin.py  utils.py
